--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,1 +1,8 @@
   $main-font-color: #000000;
+  $second-font-color: #9d9d9d;
+  $light-font-color: #ffffff;
+  $main-font: "Roboto", "Verdana", "Tahoma", sans-serif;
+  $background-dark: #6d888e;
+  $background-light: #e1eae4;
+  
+
