--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -2,13 +2,33 @@
 /* <!-- HERO --> */
 .hero__section {
   height: 583px;
-  width: 100%;
-  /* background-size: contain; */
-  /* background-size: auto; */
-  background: url("../images/desktop/hero_rectangle_7.jpg");
+  min-width: 375px;
+  margin: 0 auto;
+  // width: 100%;
+  background: url("../images/mobile/hero_rectangle_7.jpg");
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
-  background-color: var(--background-dark);
-  /* background: url("./images/desktop/hero_rectangle_7.jpg"); */
+  // background-size: contain;
+  background-color: $background-dark;
 }
+
+@media screen and (min-width: 1200px) {
+.hero__section {
+  width: 100%;
+  background: url("../images/desktop/hero_rectangle_7.jpg");
+}
+
+}
+// .hero__section {
+//   height: 583px;
+//   width: 100%;
+//   /* background-size: contain; */
+//   /* background-size: auto; */
+//   background: url("../images/desktop/hero_rectangle_7.jpg");
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   background-color: $background-dark;
+//   /* background: url("./images/desktop/hero_rectangle_7.jpg"); */
+// }
 /* <!-- END HERO --> */
