--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -58,3 +58,11 @@ ul {
 //   margin-left: auto;
 //   margin-right: auto;
 // }
+
+.underline {
+  text-decoration: underline;
+}
+
+.here {
+  color: $main-font-color;
+}
