--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,14 @@ ul {
   }
 }
 
+.underline {
+  text-decoration: underline;
+}
+
+.here {
+  color: #000000;
+}
+
 /* <!--  HEADER - NAV --> */
 .navigation__list {
   display: none;
@@ -267,5 +275,108 @@ ul {
 footer {
   text-align: center;
   margin-top: 90px;
+}
+
+.coordinates__container {
+  padding: 16px;
+}
+
+.coordinates__link {
+  color: #9d9d9d;
+}
+
+.coordinates__text {
+  margin: 0 10px;
+  color: #9d9d9d;
+}
+
+.article__container {
+  padding: 16px;
+  display: flex;
+}
+
+.article__header {
+  margin-bottom: 20px;
+}
+
+.article__text {
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.navigation__link.here {
+  color: #000000;
+}
+
+.header__about {
+  background-color: #e1eae4;
+}
+
+.about__section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 162px;
+  min-width: 375px;
+  margin: 0 auto;
+  background: url("../images/mobile/about.jpg");
+  background-position: 50% 10%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #6d888e;
+}
+
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .about__section {
+    background: url("../images/mobile/about@2x.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 10%;
+  }
+}
+
+.about__title {
+  font-size: 36px;
+  line-height: 42px;
+}
+
+.coordinates__container.container {
+  display: flex;
+}
+
+@media screen and (min-width: 1200px) {
+  .about__section {
+    width: 100%;
+    height: 240px;
+    background: url("../images/desktop/about.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 10%;
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .about__section {
+    background: url("../images/desktop/about@2x.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 20%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about__title {
+    font-size: 66px;
+    line-height: 70px;
+  }
+  .desktop-menu__link.about {
+    transition: box-shadow 300ms linear;
+  }
+  .desktop-menu__link.about:hover, .desktop-menu__link.about:focus {
+    box-shadow: 0px 0px 10px 2px rgba(66, 68, 90, 0.51);
+  }
+  .article__text-wrapper {
+    max-width: 50%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
